objects/User.object
<CustomObject>
    <fields>
        <fullName>CMPL123__ESign_Hint_Answer_1__c</fullName>
        <description>Hint Answer 1</description>
        <inlineHelpText>Specify answer of question 1</inlineHelpText>
        <label>E-Sign Hint Answer 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__ESign_Hint_Answer_2__c</fullName>
        <description>Hint Answer 2</description>
        <inlineHelpText>Specify answer of question # 2</inlineHelpText>
        <label>E-Sign Hint Answer 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__ESign_Hint_Question_1__c</fullName>
        <description>Choose Question</description>
        <inlineHelpText>Choose Hint Question 1</inlineHelpText>
        <label>E-Sign Hint Question 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name of your high school?</fullName>
                </value>
                <value>
                    <fullName>City you went to college?</fullName>
                </value>
                <value>
                    <fullName>What is your favorite colour?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__ESign_Hint_Question_2__c</fullName>
        <description>Hint Question2</description>
        <inlineHelpText>Choose Hint Question</inlineHelpText>
        <label>E-Sign Hint Question 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name of your high school?</fullName>
                </value>
                <value>
                    <fullName>City you went to college?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123__ESign_Password_Expired_Date__c</fullName>
        <description>E-Sign Password Expired Date</description>
        <inlineHelpText>E-Sign Password Expired Date</inlineHelpText>
        <label>E-Sign Password Expired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__ESign_Password__c</fullName>
        <description>Esign password</description>
        <inlineHelpText>Esign password</inlineHelpText>
        <label>E-Sign Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CMPL123__Occasional_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies an Occasional User who has a limited allotment of yearly transactions (e.g., create or update a record).</inlineHelpText>
        <label>Occasional User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Original_Name__c</fullName>
        <description>Original Name</description>
        <inlineHelpText>Original Name</inlineHelpText>
        <label>Original Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Coordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TWD_Role__c</fullName>
        <label>TWD Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Coordinator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Certified_Product_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Product Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Certified_Scrum_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Scrum Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Team User</fullName>
                </value>
                <value>
                    <fullName>API User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Notification_Level__c</fullName>
        <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
        <label>Work Notification Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bread &amp; Butter</fullName>
                </value>
                <value>
                    <fullName>Meat &amp; Potatoes</fullName>
                    <default>true</default>
                    <label>Meat &amp; Potatoes</label>
                </value>
                <value>
                    <fullName>The Whole Enchilada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Owner_Certified_Date__c</fullName>
        <label>Product Owner Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Master_Certified_Date__c</fullName>
        <label>Scrum Master Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Show_All_Work_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show All Work Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Member_Allocation__c</fullName>
        <formula>HYPERLINK('/apex/adm_teammemberallocation?Id=' +  Id, 'view' )</formula>
        <label>Team Member Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__User_Preference__c</fullName>
        <label>User Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Wall_Preference__c</fullName>
        <label>Wall Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work_User_Interface__c</fullName>
        <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
        <label>Work User Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Next Generation</fullName>
                    <default>true</default>
                    <label>Next Generation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>